# juniper-actix-web-sqlx-example

./: .env.example  Cargo.toml  README.md  docker-compose.yml
db/: schema.sql
src/: main.rs
