[package]
name = "juniper-actix-web-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.56"
dotenv = "0.15.0"
juniper = "0.15.9"
juniper_actix = "0.4.0"
sqlx = { version = "0.5.11", features = ["postgres", "runtime-actix-native-tls"] }
